Added user role and more pom dependencies